# mind-project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  kate.pro  main.cpp  readme.md
enc_temp_folder/54a533fb75ca61eb9d57bac03af17e31/: Parser.cpp
src/: main.cpp
src/parser/: AST.cpp  AST.h  AstNode.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
src/parser/ast-nodes/: AstNodeAbstract.h  AstNodeExpression.cpp  AstNodeExpression.h  AstNodeFile.cpp  AstNodeFile.h  AstNodeMethod.cpp  AstNodeMethod.h  AstNodeModel.cpp  AstNodeModel.h  AstNodeProjectRoot.cpp  AstNodeProjectRoot.h  AstNodeReturnExpression.cpp  AstNodeReturnExpression.h  AstNodeTensorFlowPrimirive.cpp  AstNodeTensorFlowPrimirive.h
test_models/: salary.mind
